# e2

./: .gitignore  Cargo.toml  README.md  do.sh
etc/: 3x3.ini  conf.ini
src/: cfg.rs  fsio.rs  last_gasp.rs  lib.rs  log.rs  main.rs  pre_process.rs  solve.rs  st.rs  test_st.rs  util.rs
tests/: integration_test.rs  system.sh
var/: 3_3_9.xml
